--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Geemail123 by GongyuanHe</title>
+    <title>Text Twist by GongyuanHe</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Gee-mail</h1>
+        <h1>Text Twist</h1>
         <h2></h2>
-        <a href="https://github.com/GongyuanHe/geemail123" class="button"><small>View project on</small> GitHub</a>
+        <a href="https://github.com/parkpoiuyyy/text_twist_Web" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
