--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           
-          <img src="images/texttwist.png"  style="width:683px;height:537px;">
+          <img src="images/text_twist.png"  style="width:683px;height:537px;">
            <h1>Feature</h1>
              <ul>
                 <li>A word puzzle web application written in Javascript and PHP</li>
