--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            <h1>Feature</h1>
              <ul>
                 <li>A word puzzle web application written in Javascript</li>
-                <li>With session and cookie function, users can automatically login in and resum the game</li>
+                <li>With session and cookie function, users can automatically login in and resume the game</li>
                 <li>All answer is given by a sqlite database on server side</li>
                 <li>Players have multiple choices like twist the given letter set and show whole answer</li>
                
